# buildbot-repro

./: .gitattributes  .gitignore  Dockerfile.worker  README.md  README.txt  buildbot.tac  db.env  docker-compose.yml  lorem.txt  master.py  requirements.txt  worker.tac
buildbot-99.9.9/buildbot/: _version.py
buildbot-99.9.9/buildbot.egg-info/: entry_points.txt
buildbot_badges-99.9.9/buildbot_badges/: _version.py
buildbot_badges-99.9.9/buildbot_badges.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
buildbot_console_view-99.9.9/: PKG-INFO
buildbot_console_view-99.9.9/buildbot_console_view.egg-info/: SOURCES.txt
buildbot_grid_view-99.9.9/: PKG-INFO
buildbot_grid_view-99.9.9/buildbot_grid_view.egg-info/: SOURCES.txt
buildbot_pkg-99.9.9/: setup.cfg
buildbot_waterfall_view-99.9.9/buildbot_waterfall_view/: _version.py
buildbot_waterfall_view-99.9.9/buildbot_waterfall_view.egg-info/: PKG-INFO  SOURCES.txt
buildbot_worker-99.9.9/buildbot_worker.egg-info/: requires.txt
buildbot_wsgi_dashboards-99.9.9/buildbot_wsgi_dashboards/: _version.py
buildbot_wsgi_dashboards-99.9.9/buildbot_wsgi_dashboards.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
buildbot_www-99.9.9/: PKG-INFO
buildbot_www-99.9.9/buildbot_www/: _version.py
buildbot_www-99.9.9/buildbot_www.egg-info/: SOURCES.txt
nginx/: nginx.conf
subdir/: pyproject.toml
with-deps/buildbot_pkg-99.9.9/: pyproject.toml
with-deps/buildbot_pkg-99.9.9/_custom_build/: buildbot_backend.py
with-deps/buildbot_pkg-99.9.9/buildbot_pkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+69 files in other folders)
